--- a/README
+++ b/README
@@ -9,3 +9,21 @@
 ### 実験と仕組み化
 * Python による YouTube 全自動収益工場の構築
 * サーバーレス（AWS Lambda）を活用したコスト最適化の自動運用
+---
+### 🛠 実装済みプロジェクト：5日間天気予報の自動取得と可視化
+
+Pythonを用いて外部APIから情報を取得し、実務で活用できるレベルのレポート（グラフ）を自動生成するツールを開発しました。
+
+#### 🔹 実装した主な機能
+- **API連携**: OpenWeatherMap APIから5日間（3時間おき）の気象データをJSON形式で取得。
+- **データ抽出**: 複雑なJSON構造から、必要な「日時」と「気温」を正確に抽出。
+- **可視化（データ・ハック）**: 
+  - 40個のデータをそのまま並べず、24時間周期（8ステップ）で目盛りを間引くことで視認性を向上。
+  - レポート品質のグラフ（Matplotlib使用）を自動生成。
+- **動的ファイル管理**: `datetime`モジュールを使用し、実行時の日付をファイル名に自動刻印して保存。
+
+#### 📊 生成されたレポートの例
+![天気予報グラフ](./weather_20260202.png)
+
+#### 💡 キャリアへの繋がり
+このプロジェクトを通じて、**「外部データの取得 → 構造の解析(JSON) → 意思決定のための可視化」**という、FinOpsやAWSエンジニアに必須のデータ処理サイクルを習得しました。
