--- a/README
+++ b/README
@@ -1,6 +1,12 @@
 # Project-ADVANCE-2026
 ## ITをうまく日常に組み込んで活用していく道
 
+## 📌 目次
+- [プロジェクトの概要](#-プロジェクトの概要)
+- [5日間天気予報の自動取得と可視化](#-5日間天気予報の自動取得と可視化)
+    - [実装済み機能](#-実装した主な機能)
+    - [生成レポート例](#-生成されたレポートの例)
+
 ### 基礎構築
 * AWS 認定資格（CLF）の取得
 * 実務経験の蓄積
